# flet-lucid

./: Justfile  README.md  README_en.md  pyproject.toml
examples/flet_lucid_example/: pyproject.toml
examples/flet_lucid_example/src/: main.py
generate/: generator.py
src/flet_lucid/: __init__.py  flet_lucid.py  lucid_data.py  lucid_data_web.py
src/flet_lucid.egg-info/: PKG-INFO  SOURCES.txt
src/flutter/flet_lucid/: pubspec.yaml
src/flutter/flet_lucid/lib/src/: lucid_data.dart
