[project]
name = "flet-lucid-example"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet-lucid",
  "flet>=0.80.0",
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.0",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "flet-lucid-example"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2026 by MyCompany"

[tool.flet.app]
path = "src"

[tool.flet.dev_packages]
flet-lucid = "../.." # relative path

[tool.uv.sources]
flet-lucid = { path = "../../", editable = true }
